# serializer version: 1
# name: test_pipe_agg[zeta_pipe_agg][sql]
  '''
  select 1 x
  |> AGGREGATE count(*), sum(x) as xx
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	x
              as_alias
                ident	xx
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_agg_list_trailing_comma][sql]
  '''
  select 1
  |> AGGREGATE count(*),
  |> AGGREGATE count(*), GROUP BY x
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_agg_list_trailing_comma][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
      group_by
        grouping_items
          grouping_item
            ident	x
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_aliases][sql]
  '''
  select 1
  |> AGGREGATE count(*) as x, count(*) z
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_aliases][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	z
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_dot_star][sql]
  '''
  select 1
  |> AGGREGATE x, s.*, f(y).*, (a+b).*
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_dot_star][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              ident	s
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              function_call_expr
                function_name
                  ident	f
                function_args
                  pos_arg
                    ident	y
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              parenthesized_expr
                add_expr
                  ident	a
                  ident	b
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_except_replace][sql]
  '''
  select 1
  |> AGGREGATE x.* except (a,b),
               y.* replace (abc as def),
               z.* except (a) replace (1+2 as ccc)
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_except_replace][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              ident	x
              select_except
                select_except_list
                  select_except_item
                    ident	a
                  select_except_item
                    ident	b
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              ident	y
              select_replace
                select_replace_list
                  select_replace_item
                    ident	abc
                    ident	def
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              ident	z
              select_except
                select_except_list
                  select_except_item
                    ident	a
              select_replace
                select_replace_list
                  select_replace_item
                    add_expr
                      integer_literal	1
                      integer_literal	2
                    ident	ccc
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by][sql]
  '''
  select 1
  |> AGGREGATE 1 GROUP AND ORDER BY x, y DESC,
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              integer_literal	1
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            ident	x
          grouping_item
            ident	y
            order_by_item_sort	DESC
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by_aliased][sql]
  '''
  from x
  |> AGGREGATE
     GROUP AND ORDER BY x+1 AS y ASC
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by_aliased][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	x
    pipe_agg
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            add_expr
              ident	x
              integer_literal	1
            as_alias
              ident	y
            order_by_item_sort	ASC
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by_grouping_sets_kitchen_sink][sql]
  '''
  select 1
  |> AGGREGATE 1
     GROUP AND ORDER BY (),ROLLUP(x),CUBE(x),GROUPING SETS(x)
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by_grouping_sets_kitchen_sink][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              integer_literal	1
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            grouping_item_empty
          grouping_item
            rollup_list
              rollup_item
                ident	x
          grouping_item
            cube_list
              cube_item
                ident	x
          grouping_item
            grouping_set_list
              grouping_set
                ident	x
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by][sql]
  '''
  select 1
  |> AGGREGATE sum(z), 1+count(x+1) GROUP BY x, y+2, 3
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	z
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              add_expr
                integer_literal	1
                function_call_expr
                  function_name
                    ident	count
                  function_args
                    pos_arg
                      add_expr
                        ident	x
                        integer_literal	1
      group_by
        grouping_items
          grouping_item
            ident	x
          grouping_item
            add_expr
              ident	y
              integer_literal	2
          grouping_item
            integer_literal	3
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_alias_explicit][sql]
  '''
  select 1
  |> AGGREGATE count(*) as x, count(*) z
     GROUP BY x AS y, z, 1 AS one, x+y AS xy
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_alias_explicit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	z
      group_by
        grouping_items
          grouping_item
            ident	x
            as_alias
              ident	y
          grouping_item
            ident	z
          grouping_item
            integer_literal	1
            as_alias
              ident	one
          grouping_item
            add_expr
              ident	x
              ident	y
            as_alias
              ident	xy
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_alias_implicit][sql]
  '''
  select 1
  |> AGGREGATE count(*) as x, count(*) z
     GROUP BY x y, x+y xy
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_alias_implicit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	z
      group_by
        grouping_items
          grouping_item
            ident	x
            as_alias
              ident	y
          grouping_item
            add_expr
              ident	x
              ident	y
            as_alias
              ident	xy
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_empty][sql]
  '''
  select 1
  |> AGGREGATE sum(y) GROUP BY ()
  |> AGGREGATE sum(y) GROUP BY y, (), x
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_empty][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	y
      group_by
        grouping_items
          grouping_item
            grouping_item_empty
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	y
      group_by
        grouping_items
          grouping_item
            ident	y
          grouping_item
            grouping_item_empty
          grouping_item
            ident	x
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_order_by_implicit][sql]
  '''
  select 1
  |> AGGREGATE
     GROUP BY
        x,
        x+1 ASC,
        f() DESC,
        z ASC NULLS FIRST,
        zz DESC NULLS LAST,
        a NULLS FIRST,
        aa NULLS LAST
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_order_by_implicit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      group_by
        grouping_items
          grouping_item
            ident	x
          grouping_item
            add_expr
              ident	x
              integer_literal	1
            order_by_item_sort	ASC
          grouping_item
            function_call_expr
              function_name
                ident	f
            order_by_item_sort	DESC
          grouping_item
            ident	z
            order_by_item_sort	ASC
            order_by_item_nulls	FIRST
          grouping_item
            ident	zz
            order_by_item_sort	DESC
            order_by_item_nulls	LAST
          grouping_item
            ident	a
            order_by_item_nulls	FIRST
          grouping_item
            ident	aa
            order_by_item_nulls	LAST
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_trailing_comma][sql]
  '''
  select 1
  |> AGGREGATE GROUP BY x,
  |> AGGREGATE GROUP BY x, y,
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_trailing_comma][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      group_by
        grouping_items
          grouping_item
            ident	x
    pipe_agg
      group_by
        grouping_items
          grouping_item
            ident	x
          grouping_item
            ident	y
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_grouping_item_kitchen_sink][sql]
  '''
  select 1
  |> AGGREGATE count(*) GROUP BY ROLLUP(x,y)
  |> AGGREGATE GROUP BY GROUPING SETS ((x), (y,z))
  |> AGGREGATE xyz GROUP BY GROUPING SETS(CUBE(x,y), (z,z), ROLLUP(a,b));
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_grouping_item_kitchen_sink][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
      group_by
        grouping_items
          grouping_item
            rollup_list
              rollup_item
                ident	x
              rollup_item
                ident	y
    pipe_agg
      group_by
        grouping_items
          grouping_item
            grouping_set_list
              grouping_set
                parenthesized_expr
                  ident	x
              grouping_set
                struct_literal
                  ident	y
                  ident	z
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              ident	xyz
      group_by
        grouping_items
          grouping_item
            grouping_set_list
              grouping_set
                cube_list
                  cube_item
                    ident	x
                  cube_item
                    ident	y
              grouping_set
                struct_literal
                  ident	z
                  ident	z
              grouping_set
                rollup_list
                  rollup_item
                    ident	a
                  rollup_item
                    ident	b
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_order_by][sql]
  '''
  from t
  |> aggregate count(*) ASC,
     sum(x) alias DESC,
     avg(y) AS alias ASC NULLS FIRST,
     max(distinct z) DESC NULLS LAST,
     nosuffix()
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_order_by][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
          order_by_item_sort	ASC
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	x
              as_alias
                ident	alias
          order_by_item_sort	DESC
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	avg
                function_args
                  pos_arg
                    ident	y
              as_alias
                ident	alias
          order_by_item_sort	ASC
          order_by_item_nulls	FIRST
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	max
                  function_distinct
                function_args
                  pos_arg
                    ident	z
          order_by_item_sort	DESC
          order_by_item_nulls	LAST
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	nosuffix
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_order_by_everywhere][sql]
  '''
  from t
  |> aggregate count(*) asc
     group by key asc
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_order_by_everywhere][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
          order_by_item_sort	asc
      group_by
        grouping_items
          grouping_item
            ident	key
            order_by_item_sort	asc
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_window_fail_analysis][sql]
  '''
  select 1
  |> AGGREGATE 1, x, sum(y) OVER ()
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_window_fail_analysis][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              integer_literal	1
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	y
                window_expr
                  window_spec
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as][sql]
  'SELECT 1 |> AS t'
# ---
# name: test_pipe_as[zeta_pipe_as][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_as
      ident	t
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_chained][sql]
  'SELECT 1 |> AS t1 |> AS t2;'
# ---
# name: test_pipe_as[zeta_pipe_as_chained][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_as
      ident	t1
    pipe_as
      ident	t2
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_input_aliased][sql]
  'SELECT 1 x |> AS t'
# ---
# name: test_pipe_as[zeta_pipe_as_input_aliased][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_as
      ident	t
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_scope_oopsie][sql]
  '''
  FROM (SELECT 1 AS a |> AS t)
  |> SELECT t.a
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_scope_oopsie][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	a
              pipe_as
                ident	t
    pipe_select
      select_list
        select_expr
          path_expression
            ident	t
            ident	a
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_typical_usage_join][sql]
  '''
  FROM t1
  |> JOIN t2 USING(key)
  |> AS t3
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_typical_usage_join][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t1
    pipe_join
      from_item_table
        path_expression
          ident	t2
      on_or_using_clause
        using_clause
          ident	key
    pipe_as
      ident	t3
  
  '''
# ---
# name: test_pipe_call[zeta_pipe_call][sql]
  '''
  select 1
  |> call f()
  |> call a.b.c(1, x.y, g(), named=>5)
  # TODO: TVF-specific syntax
  # |> call f(TABLE t, (select 1))
  # |> call f(DESCRIPTOR(col))
  # |> call f(MODEL m, CONNECTION c)
  '''
# ---
# name: test_pipe_call[zeta_pipe_call][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_call
      function_call_expr
        function_name
          ident	f
    pipe_call
      function_call_expr
        function_name
          path_expression
            ident	a
            ident	b
            ident	c
        function_args
          pos_arg
            integer_literal	1
          pos_arg
            path_expression
              ident	x
              ident	y
          pos_arg
            function_call_expr
              function_name
                ident	g
          named_arg
            ident	named
            integer_literal	5
  
  '''
# ---
# name: test_pipe_drop[zeta_pipe_drop][sql]
  '''
  select x
  |> drop a
  |> drop a,
  |> drop a,b,c
  |> drop a,b,c,
  '''
# ---
# name: test_pipe_drop[zeta_pipe_drop][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	x
    pipe_drop
      drop_list
        drop_item
          ident	a
    pipe_drop
      drop_list
        drop_item
          ident	a
    pipe_drop
      drop_list
        drop_item
          ident	a
        drop_item
          ident	b
        drop_item
          ident	c
    pipe_drop
      drop_list
        drop_item
          ident	a
        drop_item
          ident	b
        drop_item
          ident	c
  
  '''
# ---
# name: test_pipe_from[zeta_pipe_from][sql]
  'from t'
# ---
# name: test_pipe_from[zeta_pipe_from][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
  
  '''
# ---
# name: test_pipe_from[zeta_pipe_from_expression_subquery][sql]
  '''
  select (from t), EXISTS(from t1), ARRAY(from t2)
  from (from t)
  '''
# ---
# name: test_pipe_from[zeta_pipe_from_expression_subquery][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          subquery
            query_expr
              pipe_from
                from_clause
                  from_item_table
                    path_expression
                      ident	t
        select_expr
          exists_subquery_expr
            query_expr
              pipe_from
                from_clause
                  from_item_table
                    path_expression
                      ident	t1
        select_expr
          array_subquery_expr
            query_expr
              pipe_from
                from_clause
                  from_item_table
                    path_expression
                      ident	t2
      from_clause
        from_item_subquery
          subquery
            query_expr
              pipe_from
                from_clause
                  from_item_table
                    path_expression
                      ident	t
  
  '''
# ---
# name: test_pipe_from[zeta_pipe_from_subquery][sql]
  'from (select * from t)'
# ---
# name: test_pipe_from[zeta_pipe_from_subquery][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_star
                from_clause
                  from_item_table
                    path_expression
                      ident	t
  
  '''
# ---
# name: test_pipe_from[zeta_pipe_from_unnest_aliased][sql]
  'from unnest([1]) x'
# ---
# name: test_pipe_from[zeta_pipe_from_unnest_aliased][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_unnest
          unnest_expr
            array_literal
              array_literal_item_list
                integer_literal	1
          as_alias
            ident	x
  
  '''
# ---
# name: test_pipe_join[zeta_pipe_join][sql]
  '''
  select 1 x
  |> join t2.x.y
  |> join t3 using (x)
  |> left join t4 on true
  |> inner join (select zzz from zzz)
  |> cross join t6
  # Private syntax
  # |> natural join t7
  # |> hash join t7
  # |> lookup join t7
  '''
# ---
# name: test_pipe_join[zeta_pipe_join][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_join
      from_item_table
        path_expression
          ident	t2
          ident	x
          ident	y
    pipe_join
      from_item_table
        path_expression
          ident	t3
      on_or_using_clause
        using_clause
          ident	x
    pipe_join
      join_criteria	left
      from_item_table
        path_expression
          ident	t4
      on_or_using_clause
        on_clause
          boolean_literal	true
    pipe_join
      join_criteria	inner
      from_item_subquery
        subquery
          query_expr
            select
              select_list
                select_expr
                  ident	zzz
              from_clause
                from_item_table
                  path_expression
                    ident	zzz
    pipe_join
      join_criteria	cross
      from_item_table
        path_expression
          ident	t6
  
  '''
# ---
# name: test_pipe_join[zeta_pipe_join_unnest][sql]
  '''
  select 1 x
  # TODO: Add TVFs
  # |> join tvf((select 1))
  |> join unnest(y)
  |> join unnest(y.z) i WITH OFFSET o
  '''
# ---
# name: test_pipe_join[zeta_pipe_join_unnest][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_join
      from_item_unnest
        unnest_expr
          ident	y
    pipe_join
      from_item_unnest
        unnest_expr
          path_expression
            ident	y
            ident	z
        as_alias
          ident	i
        from_unnest_offset_expr
          as_alias
            ident	o
  
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window][sql]
  '''
  from t
  |> select sum(x) over(w), count(*) over (w2)
     window w AS (),
            w2 AS (partition by a)
  |> extend max(y) over (w partition by x)
     window w AS (ORDER BY b ROWS CURRENT ROW)
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	sum
            function_args
              pos_arg
                ident	x
            window_expr
              window_spec
                ident	w
        select_expr
          function_call_expr
            function_name
              ident	count
            function_args
              star_arg
            window_expr
              window_spec
                ident	w2
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
        window_item
          ident	w2
          window_expr
            window_spec
              window_partition_by
                ident	a
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	max
              function_args
                pos_arg
                  ident	y
              window_expr
                window_spec
                  ident	w
                  window_partition_by
                    ident	x
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
              window_order_by
                order_by_items
                  order_by_item
                    ident	b
              window_frame
                window_frame_kind	ROWS
                window_frame_start
                  window_frame_current_row
  
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_extend_trailing_comma][sql]
  '''
  from t
  |> extend sum(x) over (w),
  window w AS (),
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_extend_trailing_comma][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	sum
              function_args
                pos_arg
                  ident	x
              window_expr
                window_spec
                  ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
  
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_select_trailing_comma][sql]
  '''
  from t
  |> select sum(x) over (w),
  window w AS (),
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_select_trailing_comma][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	sum
            function_args
              pos_arg
                ident	x
            window_expr
              window_spec
                ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
  
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_unused][sql]
  '''
  from t
  |> select sum(x)
     window w AS ()
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_unused][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	sum
            function_args
              pos_arg
                ident	x
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
  
  '''
# ---
# name: test_pipe_order_by[zeta_pipe_order_by][sql]
  '''
  select 1
  |> order by x
  |> order by 1, x, y, x+1, sum(x), x() OVER ()
  |> order by x ASC, y DESC
  # |> order by x COLLATE "abc"
  |> order by x NULLS FIRST
  # |> order by x COLLATE "abc" ASC NULLS LAST
  '''
# ---
# name: test_pipe_order_by[zeta_pipe_order_by][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
    pipe_order_by
      order_by_items
        order_by_item
          integer_literal	1
        order_by_item
          ident	x
        order_by_item
          ident	y
        order_by_item
          add_expr
            ident	x
            integer_literal	1
        order_by_item
          function_call_expr
            function_name
              ident	sum
            function_args
              pos_arg
                ident	x
        order_by_item
          function_call_expr
            function_name
              ident	x
            window_expr
              window_spec
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
          order_by_item_sort	ASC
        order_by_item
          ident	y
          order_by_item_sort	DESC
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
          order_by_item_nulls	FIRST
  
  '''
# ---
# name: test_pipe_order_by[zeta_pipe_order_by_trailing_comma][sql]
  '''
  select 1
  |> order by x,
  |> order by x, y,
  '''
# ---
# name: test_pipe_order_by[zeta_pipe_order_by_trailing_comma][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
        order_by_item
          ident	y
  
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_aliased_exprs_kitchen_sink][sql]
  '''
  FROM t
  |> PIVOT(SUM(a) AS sum_a, SUM(aa) sum_aa, 2+COUNT(b+3)
           FOR t.x IN (z, x+y xpy, 1 AS one)) AS p
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_aliased_exprs_kitchen_sink][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	a
            as_alias
              ident	sum_a
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	aa
            as_alias
              ident	sum_aa
          pivot_item
            add_expr
              integer_literal	2
              function_call_expr
                function_name
                  ident	COUNT
                function_args
                  pos_arg
                    add_expr
                      ident	b
                      integer_literal	3
        path_expression
          ident	t
          ident	x
        pivot_value_list
          pivot_value_item
            ident	z
          pivot_value_item
            add_expr
              ident	x
              ident	y
            as_alias
              ident	xpy
          pivot_value_item
            integer_literal	1
            as_alias
              ident	one
      as_alias
        ident	p
  
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_multi_implicit_alias][sql]
  '''
  FROM t
  |> PIVOT(SUM(a), SUM(b) FOR b IN (0)) pivot_table
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_multi_implicit_alias][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	a
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	b
        path_expression
          ident	b
        pivot_value_list
          pivot_value_item
            integer_literal	0
      as_alias
        ident	pivot_table
  
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_nonreserved_kw][sql]
  '''
  FROM t
  |> PIVOT(a FOR b IN (c)) AS PIVOT
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_nonreserved_kw][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            ident	a
        path_expression
          ident	b
        pivot_value_list
          pivot_value_item
            ident	c
      as_alias
        ident	PIVOT
  
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_single][sql]
  '''
  FROM t
  |> PIVOT(SUM(a) FOR b IN (0, 1))
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_single][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	a
        path_expression
          ident	b
        pivot_value_list
          pivot_value_item
            integer_literal	0
          pivot_value_item
            integer_literal	1
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_extend_agg][sql]
  '''
  select 1 x
  |> extend count(*), sum(x) over ()
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_extend_agg][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	count
              function_args
                star_arg
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	sum
              function_args
                pos_arg
                  ident	x
              window_expr
                window_spec
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_extend_modifiers][sql]
  '''
  select 1
  |> EXTEND x.*,
            f(x).* except(a),
            (1+x).* replace(a as b),
            (sum(x) OVER ()).*
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_extend_modifiers][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_dot_star
            ident	x
        pipe_selection_item
          select_dot_star
            function_call_expr
              function_name
                ident	f
              function_args
                pos_arg
                  ident	x
            select_except
              select_except_list
                select_except_item
                  ident	a
        pipe_selection_item
          select_dot_star
            parenthesized_expr
              add_expr
                integer_literal	1
                ident	x
            select_replace
              select_replace_list
                select_replace_item
                  ident	a
                  ident	b
        pipe_selection_item
          select_dot_star
            parenthesized_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	x
                window_expr
                  window_spec
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_extend_quirks][sql]
  '''
  select 1
  |> EXTEND sum(x) OVER ().*
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_extend_quirks][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_dot_star
            function_call_expr
              function_name
                ident	sum
              function_args
                pos_arg
                  ident	x
              window_expr
                window_spec
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_extend_trailing_commas][sql]
  '''
  select 1 x,
  |> extend 2,
  |> extend 3, 4,
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_extend_trailing_commas][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            integer_literal	2
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            integer_literal	3
        pipe_selection_item
          select_expr
            integer_literal	4
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_from_subquery][sql]
  '''
  select 5
  from (
    select 1
    |> where true
  )
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_from_subquery][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	5
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
              pipe_where
                boolean_literal	true
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_limit][sql]
  '''
  select 1 x
  |> limit 10
  |> limit 12 offset 22
  |> limit @x offset @y
  |> limit cast(@z as int64)
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_limit][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_limit
      limit_expr
        integer_literal	10
    pipe_limit
      limit_expr
        integer_literal	12
      offset_expr
        integer_literal	22
    pipe_limit
      limit_expr
        parameter	x
      offset_expr
        parameter	y
    pipe_limit
      limit_expr
        cast_expr_kind_cast
          cast_expr_target
            parameter	z
            ident	int64
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_projection][sql]
  '''
  select 1 x
  |> extend 2 y, 3 AS z
  |> extend y+z AS yz, pb.f1.f2[3] f3, sqrt(y)
  |> where true
  |> extend 1,2,3 as `three`, 4 four
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_projection][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            integer_literal	2
            as_alias
              ident	y
        pipe_selection_item
          select_expr
            integer_literal	3
            as_alias
              ident	z
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            add_expr
              ident	y
              ident	z
            as_alias
              ident	yz
        pipe_selection_item
          select_expr
            subscript_expr
              path_expression
                ident	pb
                ident	f1
                ident	f2
              integer_literal	3
            as_alias
              ident	f3
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	sqrt
              function_args
                pos_arg
                  ident	y
    pipe_where
      boolean_literal	true
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            integer_literal	1
        pipe_selection_item
          select_expr
            integer_literal	2
        pipe_selection_item
          select_expr
            integer_literal	3
            as_alias
              ident	`three`
        pipe_selection_item
          select_expr
            integer_literal	4
            as_alias
              ident	four
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_select_forms][sql]
  '''
  select 1
  |> select 1,2,"abc"
  |> select distinct x
  |> select as struct x,y
  |> select as value z
  # |> select as c.TypeName z
  |> select *, * except(abc), * replace(abc as def)
  # |> select @{hint=1} *, * except(abc), * replace(abc as def)
  |> select abc.def.*, abc.* except(x)
  # |> select with anonymization 1,2
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_select_forms][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
        select_expr
          string_literal	"abc"
    pipe_select
      select_list
        select_expr
          ident	distinct
          as_alias
            ident	x
    pipe_select
      select_shape	struct
      select_list
        select_expr
          ident	x
        select_expr
          ident	y
    pipe_select
      select_shape	value
      select_list
        select_expr
          ident	z
    pipe_select
      select_list
        select_star
        select_star
          select_except
            select_except_list
              select_except_item
                ident	abc
        select_star
          select_replace
            select_replace_list
              select_replace_item
                ident	abc
                ident	def
    pipe_select
      select_list
        select_dot_star
          path_expression
            ident	abc
            ident	def
        select_dot_star
          ident	abc
          select_except
            select_except_list
              select_except_item
                ident	x
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_select_subquery][sql]
  'select (select 1 |> where true)'
# ---
# name: test_pipe_query[zeta_pipe_query_select_subquery][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
              pipe_where
                boolean_literal	true
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_select_trailing_commas][sql]
  '''
  select 1,
  |> select 2,
  |> select 3,4,
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_select_trailing_commas][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_select
      select_list
        select_expr
          integer_literal	2
    pipe_select
      select_list
        select_expr
          integer_literal	3
        select_expr
          integer_literal	4
  
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_simple][sql]
  '''
  select 1,2,3
  |> where true
  '''
# ---
# name: test_pipe_query[zeta_pipe_query_simple][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
        select_expr
          integer_literal	3
    pipe_where
      boolean_literal	true
  
  '''
# ---
# name: test_pipe_rename[zeta_pipe_rename][sql]
  '''
  select 1
  |> RENAME x AS y
  |> RENAME `a b` AS `d e`, x AS y, aaa bbb
  '''
# ---
# name: test_pipe_rename[zeta_pipe_rename][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_rename
      rename_list
        rename_item
          ident	x
          as_alias
            ident	y
    pipe_rename
      rename_list
        rename_item
          ident	`a b`
          as_alias
            ident	`d e`
        rename_item
          ident	x
          as_alias
            ident	y
        rename_item
          ident	aaa
          as_alias
            ident	bbb
  
  '''
# ---
# name: test_pipe_rename[zeta_pipe_rename_trailing_commas][sql]
  '''
  select 1
  |> RENAME a b,
  |> RENAME a b, c AS d,
  '''
# ---
# name: test_pipe_rename[zeta_pipe_rename_trailing_commas][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_rename
      rename_list
        rename_item
          ident	a
          as_alias
            ident	b
    pipe_rename
      rename_list
        rename_item
          ident	a
          as_alias
            ident	b
        rename_item
          ident	c
          as_alias
            ident	d
  
  '''
# ---
# name: test_pipe_set[zeta_pipe_set][sql]
  '''
  select x
  |> SET x = 1+2
  |> set x = 1+2, y = 3, z = z
  '''
# ---
# name: test_pipe_set[zeta_pipe_set][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	x
    pipe_set
      set_list
        set_item
          ident	x
          add_expr
            integer_literal	1
            integer_literal	2
    pipe_set
      set_list
        set_item
          ident	x
          add_expr
            integer_literal	1
            integer_literal	2
        set_item
          ident	y
          integer_literal	3
        set_item
          ident	z
          ident	z
  
  '''
# ---
# name: test_pipe_set[zeta_pipe_set_trailing_commas][sql]
  '''
  select x
  |> SET x = 1+2,
  |> set x = 1+2, y = 3, z = z,
  '''
# ---
# name: test_pipe_set[zeta_pipe_set_trailing_commas][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	x
    pipe_set
      set_list
        set_item
          ident	x
          add_expr
            integer_literal	1
            integer_literal	2
    pipe_set
      set_list
        set_item
          ident	x
          add_expr
            integer_literal	1
            integer_literal	2
        set_item
          ident	y
          integer_literal	3
        set_item
          ident	z
          ident	z
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation][sql]
  '''
  select 1
  |> union all (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	union
          set_operation_mode	all
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_by_name][sql]
  '''
  select 1
  |> UNION ALL BY NAME (select 2)
  |> INTERSECT DISTINCT BY NAME ON (x) (select 3)
  |> EXCEPT ALL BY NAME ON (x) (select 4)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_by_name][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	INTERSECT
          set_operation_mode	DISTINCT
          set_operation_modifier_by_name
            set_operation_columns
              ident	x
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	3
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	EXCEPT
          set_operation_mode	ALL
          set_operation_modifier_by_name
            set_operation_columns
              ident	x
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	4
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_complex_queries][sql]
  '''
  select 1
  |> union all
  (select * from t |> where x),
  (select 1 |> where y)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_complex_queries][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	union
          set_operation_mode	all
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_star
                from_clause
                  from_item_table
                    path_expression
                      ident	t
              pipe_where
                ident	x
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
              pipe_where
                ident	y
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_corresponding][sql]
  '''
  select 1
  |> UNION ALL CORRESPONDING (select 2)
  |> INTERSECT DISTINCT CORRESPONDING BY (x) (select 3)
  |> EXCEPT ALL STRICT CORRESPONDING BY (x) (select 4)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_corresponding][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
          set_operation_modifier_corresponding
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	INTERSECT
          set_operation_mode	DISTINCT
          set_operation_modifier_corresponding
            set_operation_columns
              ident	x
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	3
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	EXCEPT
          set_operation_mode	ALL
          set_operation_modifier_strict_corresponding
            set_operation_columns
              ident	x
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	4
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_except_all][sql]
  '''
  select 1
  |> except all (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_except_all][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	except
          set_operation_mode	all
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_except_distinct][sql]
  '''
  select 1
  |> except distinct (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_except_distinct][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	except
          set_operation_mode	distinct
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_full][sql]
  '''
  select 1
  |> FULL UNION ALL (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_full][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria	FULL
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_full_outer][sql]
  '''
  select 1
  |> FULL OUTER UNION ALL (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_full_outer][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria
            FULL
            OUTER
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_inner][sql]
  '''
  select 1
  |> INNER UNION ALL (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_inner][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria	INNER
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_intersect_all][sql]
  '''
  select 1
  |> intersect all (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_intersect_all][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	intersect
          set_operation_mode	all
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_intersect_distinct][sql]
  '''
  select 1
  |> intersect distinct (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_intersect_distinct][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	intersect
          set_operation_mode	distinct
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_left][sql]
  '''
  select 1
  |> LEFT UNION ALL (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_left][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria	LEFT
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_left_outer][sql]
  '''
  select 1
  |> LEFT OUTER UNION ALL (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_left_outer][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_criteria
            LEFT
            OUTER
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_multiple_tables][sql]
  '''
  select 1
  |> union all (select 2), (select 3)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_multiple_tables][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	union
          set_operation_mode	all
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	3
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_trailing_comma][sql]
  '''
  select 1
  |> UNION ALL (select 2),
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_trailing_comma][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	UNION
          set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_union_distinct][sql]
  '''
  select 1
  |> union distinct (select 2)
  '''
# ---
# name: test_pipe_set_operation[zeta_pipe_set_operation_union_distinct][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_set_operation
      set_operation
        set_operation_metadata
          set_operation_kind	union
          set_operation_mode	distinct
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_pipe_tablesample[zeta_pipe_tablesample][sql]
  '''
  from t
  |> TABLESAMPLE SYSTEM (10 PERCENT)
  |> TABLESAMPLE SYSTEM (cast(10 as int64) PERCENT)
  |> TABLESAMPLE SYSTEM (@param1 PERCENT)
  '''
# ---
# name: test_pipe_tablesample[zeta_pipe_tablesample][tree]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_tablesample
      tablesample_perc
        integer_literal	10
    pipe_tablesample
      tablesample_perc
        cast_expr_kind_cast
          cast_expr_target
            integer_literal	10
            ident	int64
    pipe_tablesample
      tablesample_perc
        parameter	param1
  
  '''
# ---
